Fixed days z-index

--- a/phpgwapi/js/pecalendar/pecalendar.scss
+++ b/phpgwapi/js/pecalendar/pecalendar.scss
@@ -56,7 +56,7 @@ $current-time-color: #ea4335;
 //}
 
 #ui-datepicker-div {
-  z-index: 5 !important;
+  z-index: 20 !important;
 }
 
 .calendar {
@@ -167,7 +167,7 @@ $current-time-color: #ea4335;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    //z-index: 11;
+    z-index: 11;
     line-height: 1rem;
     grid-row: 2 / span 1;
     grid-column: 2 / span 7;
